# atmo_reddit

./: .gitignore  AUDIT_REPORT.md  AUDIT_TASK.md  HARDCODED_MODELS_AUDIT.md  Hobby Comment Writing copy.json  Influencers list-Grid view.csv  LANGUAGE_PYTHON.md  RAMP_SYSTEM_DIAGNOSTIC.json  REGRESSION_REPORT_2026_06_19.md  Reddit Comments Tracking-Grid view.csv  Reddit Comments-Grid view.csv  Reddit Posts-Grid view.csv  Run hobby subreddits [1] copy.json  SYSTEM_ARCHITECTURE_SUMMARY.md  Technical Documentation - Google Drive.webloc  UI_MAP.md  XM Cyber Reddit Posts-Grid view.csv  _build_full_diag.py  _fix_alert.py  _fix_leave_popup.py  _fix_scraping.py  _gen_diag_p1.py  _generate_css.py  _insert_executor_email.py  _next_session_prompt.md  _patch_admin_all.py  _patch_approve.py  _patch_decide.py  _patch_epg.py  _patch_epg_dedup.py  _patch_portal.py  _patch_template.py  _run_pipeline.py  _send_epg_email.py  _update_docs.py  _write_design.py  _write_design_doc.py  _write_reqs.py  _write_risks.py  _write_tci_design.py  (+16 more)
marketing_site/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
marketing_site/alembic/: env.py
marketing_site/app/: config.py  database.py  main.py
marketing_site/tests/: conftest.py  test_marketing_faq.py
reddit_saas/: .dockerignore  .env.backup.20260520_230829  .env.example  .env.production  .env.production.backup.20260520_230830  DOCKER.md  Dockerfile  Makefile  PRODUCTION_FAILURE_MATRIX.md  QUALITY_REVIEW.md  README.md  _backfill_activation_routes.py  _check_tasks.py  _create_test_extension_task.py  _deploy_2026_07_05.md  _deploy_2026_07_07_beat_memory.md  _deploy_july5.md  _deploy_stale_draft_expiry.md  _seed_geo_batches.py  _test_claude.py  _test_gemini_all.py  _test_gemini_models.py  _test_gemini_no_constraint.py  _test_gemini_plaintext.py  _test_gemini_rate.py  _test_hobby_generation.py  _test_models.py  _test_models2.py  _test_results_hobby_gen_1784440219.json  _update_dwreck_prod.py  alembic.ini  celerybeat-schedule  celerybeat-schedule.db  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  reddit_saas  (+6 more)
reddit_saas/alembic/: env.py
reddit_saas/app/: __init__.py  config.py  database.py  logging_config.py  main.py  seed.py  template_filters.py  templating.py  version.py
reddit_saas/backups/: reddit_saas_pre_shared_subreddit_20260506_124648.dump
reddit_saas/data/: 09_risks.json  10_roadmap.json
reddit_saas/demo/: share-of-voice.html
reddit_saas/docs/: QA_GUIDE.md  QA_Test_Suite_Overview.md  permission_matrix.md
reddit_saas/nginx/: maintenance.html  nginx.conf  nginx.local.conf  nginx.staging.conf
reddit_saas/scripts/: agent_preflight.py  backup_db.sh  backup_prod.sh  check_post_karma.py  create_partner_user.py  lint_ui.py  (+11 more)
(+1807 files in other folders)
